--- a/demo.html
+++ b/demo.html
@@ -292,11 +292,11 @@
             <div class="editor-header">
                 <div class="logo">
                     <i class="fas fa-code"></i>
-                    <span>Markdown 编辑器</span>
+                    <span>Markdown Editor</span>
                 </div>
                 <div class="logo">
                     <i class="fas fa-check"></i>
-                    <span>问题已修复</span>
+                    <span>emoji</span>
                 </div>
             </div>
             <textarea id="editor"></textarea>
